dbus runner: Fix interface definition

qDBusRegisterMetaType registered an int for the type at runtime,
but the definitions expect an uint. If one generates code from this XML
file the runner's results will not be shown, because the DBus definitions do not match.

BUG: 433549
FIXED-IN: 5.82